--- a/NETFLIX CLONE/index.html
+++ b/NETFLIX CLONE/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <main>
     <div class="main">
         <div class="bg"></div>
 
@@ -95,7 +96,7 @@
         <button id="start">RESTART ></button>
     </div>
 </div>
-
+</main>
     <footer>
         <div class="allcenter">
             <span>For Contact|Question</span>
